test/should-fail/变量重名-2.j
function test takes integer a returns nothing
    local boolean a
endfunction